--- a/game1.html
+++ b/game1.html
@@ -19,6 +19,6 @@
     </style>
 </head>
 <body>
-    <iframe src="google.com"></iframe>
+    <iframe src="https://scratch.mit.edu/"></iframe>
 </body>
 </html>
