--- a/game1.html
+++ b/game1.html
@@ -3,22 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fullscreen Embed</title>
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            overflow: hidden;
-        }
-        iframe {
-            width: 100vw;
-            height: 100vh;
-            border: none;
-        }
-    </style>
+    <title>Game 1</title>
 </head>
 <body>
-    <iframe src="https://scratch.mit.edu/"></iframe>
+    <h1>Game 1</h1>
+    <iframe src="google.com" width="800" height="600" style="border: none;"></iframe>
 </body>
 </html>
