--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <div class="grid">
         <a href="games/game1.html"><img src="game1.jpg" alt="Game 1"></a>
-        <a href="game2.html"><img src="game2.jpg" alt="Game 2"></a>
+        <a href="games/game2.html"><img src="game2.jpg" alt="Game 2"></a>
     </div>
 </body>
 </html>
