--- a/games/game1.html
+++ b/games/game1.html
@@ -9,7 +9,7 @@
     <h1>Game 1</h1>
 
     <!-- Embedding the game -->
-    <iframe src="https://www.w3schools.com/html/tryit.asp?filename=tryhtml_default" width="800" height="600" frameborder="0"></iframe>
+    <iframe src="https://protecttheborder.libertyforgestudios.com" width="800" height="600" frameborder="0"></iframe>
 
 </body>
 </html>
