--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Game Hub</h1>
     </header>
     <div class="grid">
-        <a href="games/game1.html"><img src="game1.jpg" alt="Game 1"></a>
+        <a href="games/protecttheborder.html"><img src="game1.jpg" alt="Game 1"></a>
         <a href="games/game2.html"><img src="game2.jpg" alt="Game 2"></a>
     </div>
 </body>
