--- a/games/protecttheborder.html
+++ b/games/protecttheborder.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <header>
-        <h1>Game 1</h1>
+        <h1>Protect The Border</h1>
     </header>
 
     <!-- Embedding the game -->
