--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Logo" class="logo">
+        <img src="assets/logo.png" alt="Logo" class="logo">
         <h1>Game Hub</h1>
     </header>
     <div class="grid">
