--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <div class="grid">
         <a href="games/protecttheborder.html"><img src="assets/protecttheborderlogo.png" alt="Protect The Border"></a>
-        <a href="games/game2.html"><img src="game2.jpg" alt="Game 2"></a>
+        <a href="games/fedwars.html"><img src="fedwarslogo".png" alt="Fed Wars"></a>
     </div>
 </body>
 </html>
