--- a/games/fedwars.html
+++ b/games/fedwars.html
@@ -3,22 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fullscreen Embed</title>
+    <title>Fedwars</title>
     <style>
+        /* Reset margin and padding for body and html */
         html, body {
             margin: 0;
             padding: 0;
             height: 100%;
-            overflow: hidden;
+            width: 100%;
         }
+
+        /* Style for the header */
+        header {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            height: 60px; /* Adjust header height as needed */
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 10;
+        }
+
+        /* Make the iframe take the remaining height */
         iframe {
-            width: 100vw;
-            height: 100vh;
+            width: 100%;
+            height: calc(100vh - 60px); /* Full viewport height minus header height */
             border: none;
+            display: block;
+            margin-top: 60px; /* Push iframe down to avoid overlap with header */
         }
     </style>
 </head>
 <body>
-    <iframe src="google.com"></iframe>
+    <header>
+        <h1>Fedwars</h1>
+    </header>
+
+    <!-- Embedding the game -->
+    <iframe src="https://fedwars.libertyforgestudios.com/" 
+            frameborder="0" 
+            allowfullscreen>
+    </iframe>
 </body>
 </html>
