--- a/index.html
+++ b/index.html
@@ -5,15 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Hub</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Optional inline CSS for the search bar */
+        #searchBar {
+            display: block;
+            margin: 20px auto;
+            padding: 10px;
+            width: 60%;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
     <header>
         <img src="assets/logo.png" alt="Logo" class="logo">
         <h1>Game Hub</h1>
     </header>
+
+    <!-- Search Bar -->
+    <input type="text" id="searchBar" placeholder="Search games..." oninput="filterGames()">
+
+    <!-- Game Grid -->
     <div class="grid">
-        <a href="games/protecttheborder.html"><img src="assets/protecttheborderlogo.png" alt="Protect The Border"></a>
-        <a href="games/fedwars.html"><img src="assets/fedwarslogo.png" alt="Fed Wars"></a>
+        <a href="games/protecttheborder.html" data-name="Protect The Border">
+            <img src="assets/protecttheborderlogo.png" alt="Protect The Border">
+        </a>
+        <a href="games/fedwars.html" data-name="Fed Wars">
+            <img src="assets/fedwarslogo.png" alt="Fed Wars">
+        </a>
     </div>
+
+    <!-- Filter Script -->
+    <script>
+        function filterGames() {
+            const input = document.getElementById("searchBar").value.toLowerCase();
+            const games = document.querySelectorAll(".grid a");
+
+            games.forEach(game => {
+                const name = game.getAttribute("data-name").toLowerCase();
+                game.style.display = name.includes(input) ? "inline-block" : "none";
+            });
+        }
+    </script>
 </body>
 </html>
