--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <a href="games/fedwars.html" data-name="Fed Wars">
             <img src="assets/fedwarslogo.png" alt="Fed Wars">
         </a>
+        <a href="games/godveins.html" data-name="God Veins">
+            <img src="assets/godveinslogo.png" alt="God Veins">
+        </a>
     </div>
 
     <!-- Filter Script -->
