--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <a href="games/godveins.html" data-name="God Veins">
             <img src="assets/godveinslogo.png" alt="God Veins">
         </a>
+        <a href="games/tenminutestildawn.html" data-name="Ten Mintues Til Dawn">
+            <img src="assets/tenminutestildawn.png" alt="Ten Mintues Til Dawn">
+        </a>
     </div>
 
     <!-- Filter Script -->
