--- a/games/tenminutestildawn.html
+++ b/games/tenminutestildawn.html
@@ -42,7 +42,7 @@
     </header>
 
     <!-- Embedding the game -->
-    <iframe src="https://108.181.21.229/html/5833734/10MinutesTillDawnWebGL/index.html?v=1732313710&__cpo=aHR0cHM6Ly9odG1sLWNsYXNzaWMuaXRjaC56b25l" 
+    <iframe src="https://html-classic.itch.zone/html/5833734/10MinutesTillDawnWebGL/index.html?v=1732313710" 
             frameborder="0" 
             allowfullscreen>
     </iframe>
