--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <a href="games/tenminutestildawn.html" data-name="Ten Mintues Til Dawn">
             <img src="assets/tenminutestildawnlogo.png" alt="Ten Mintues Til Dawn">
         </a>
-        <a href="games/allemulators.html" data-name="Ten Mintues Til Dawn">
-            <img src="assets/allemulatorslogo.png" alt="Ten Mintues Til Dawn">
+        <a href="games/allemulators.html" data-name="Emulators">
+            <img src="assets/allemulatorslogo.png" alt="Emulators">
         </a>
     </div>
 
