--- a/games/godveins.html
+++ b/games/godveins.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GodVeins</title>
+    <title>Protect The Border</title>
     <style>
         /* Reset margin and padding for body and html */
         html, body {
