--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <a href="games/allemulators.html" data-name="Emulators">
             <img src="assets/allemulatorslogo.png" alt="Emulators">
         </a>
+        <a href="games/poki.html" data-name="Poki">
+            <img src="assets/pokilogo.png" alt="Poki">
+        </a>
     </div>
 
     <!-- Filter Script -->
