--- a/games/poki.html
+++ b/games/poki.html
@@ -42,7 +42,7 @@
     </header>
 
     <!-- Embedding the game -->
-    <iframe src="https://poki.com/" 
+    <iframe src="google.com" 
             frameborder="0" 
             allowfullscreen>
     </iframe>
