Update and rename poki.html to selenite.html

--- a/games/selenite.html
+++ b/games/selenite.html
@@ -42,7 +42,7 @@
     </header>
 
     <!-- Embedding the game -->
-    <iframe src="google.com" 
+    <iframe src="selenite.cc" 
             frameborder="0" 
             allowfullscreen>
     </iframe>
