--- a/games/selenite.html
+++ b/games/selenite.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poki</title>
+    <title>Selenite</title>
     <style>
         /* Reset margin and padding for body and html */
         html, body {
@@ -38,11 +38,11 @@
 </head>
 <body>
     <header>
-        <h1>Poki</h1>
+        <h1>Selenite</h1>
     </header>
 
     <!-- Embedding the game -->
-    <iframe src="selenite.cc" 
+    <iframe src="https://selenite.cc/" 
             frameborder="0" 
             allowfullscreen>
     </iframe>
