--- a/games/proxy.html
+++ b/games/proxy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Emulators</title>
+    <title>Proxy</title>
     <style>
         /* Reset margin and padding for body and html */
         html, body {
@@ -38,11 +38,11 @@
 </head>
 <body>
     <header>
-        <h1>All Emulators</h1>
+        <h1>Proxy</h1>
     </header>
 
     <!-- Embedding the game -->
-    <iframe src="https://emulatorgames.onl/" 
+    <iframe src="https://www.croxyproxy.com/" 
             frameborder="0" 
             allowfullscreen>
     </iframe>
