--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         <a href="games/poki.html" data-name="Poki">
             <img src="assets/pokilogo.png" alt="Poki">
         </a>
+        <a href="games/proxy.html" data-name="Proxy">
+            <img src="assets/proxylogo.png" alt="Proxy">
+        </a>
     </div>
 
     <!-- Filter Script -->
