--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <a href="games/allemulators.html" data-name="Emulators">
             <img src="assets/allemulatorslogo.png" alt="Emulators">
         </a>
-        <a href="games/poki.html" data-name="Poki">
-            <img src="assets/pokilogo.png" alt="Poki">
+        <a href="games/selenite.html" data-name="Selenite">
+            <img src="assets/selenitelogo.png" alt="Selenite">
         </a>
         <a href="games/proxy.html" data-name="Proxy">
             <img src="assets/proxylogo.png" alt="Proxy">
